tests/negative_tests/modules/illegalModuleApply.sa
module illegalModuleApply where
    module x (A : Bool) where
        x : Bool
        x = A

    module t = x 1